# lace

./: .gitignore  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
book/: book.toml
book/src/: SUMMARY.md  bibliography.bib  effects_rust.md  exploration.md  observations.md  other_links.md
book/src/meeting-notes/: oct-6-2023.md
crates/lace-bin/: Cargo.toml
crates/lace-bin/src/: ast_metadata.rs  debug_file.rs  error.rs  ids.rs  lice.rs  main.rs  source_file.rs  syntax_id.rs  test.rs
crates/lace-bin/src/lexer/: error.rs  mod.rs
crates/lace-bin/src/lowering/: error.rs  function.rs  mod.rs  variable.rs
crates/lace-bin/src/lowering/basic_block/: child.rs  mod.rs  terminate.rs  variables.rs  visit.rs
crates/lace-bin/src/lowering/lir/: fmt.rs  int.rs  mod.rs
crates/lace-bin/src/lowering/lire/: mod.rs
crates/lace-bin/src/name_resolution/: mod.rs  tests.rs
crates/lace-bin/src/nameres/: mod.rs
crates/lace-bin/src/parser/: ast.rs  error.rs  expr.rs  function.rs  mod.rs  precedence.rs  span.rs  statement.rs  test.rs  toplevel.rs  type_spec.rs
crates/lace-bin/src/parser/test/: ast_macros.rs  mod.rs  should_not_parse.rs  should_parse.rs
crates/lace-bin/src/typechecking/: concrete_type.rs  constraint.rs  constraint_generation.rs  constraint_metadata.rs  context.rs  ctx.rs  error.rs  implementation.rs  mod.rs  solve.rs  solved.rs  solver.rs  ty.rs  unify.rs  variable.rs
crates/lace-bin/src/typechecking/check_pass/: check.rs  mod.rs
crates/lace-bin/src/typechecking/static_pass/: find_statics.rs  mod.rs
crates/lace-bin/src/typechecking/test/: mod.rs
crates/unionfind/: Cargo.toml  README.md
crates/unionfind/src/: extra.rs  generic.rs  lib.rs  mapping.rs  tests.rs  union.rs
src/: ast.rs  error.rs  ice.rs  lexer.rs  main.rs  parser.rs  source_file.rs
src/lexer/: error.rs  mod.rs  token.rs  token_buffer.rs  token_stream.rs
src/nameres/: mod.rs  tests.rs
src/parser/: ast.rs  error.rs  expr.rs  function.rs  mod.rs  parser.rs  precedence.rs  span.rs  statement.rs  test.rs  tok.rs  toplevel.rs  type_spec.rs
src/parser/test/: ast_macros.rs  mod.rs  parse_test_helper.rs  should_not_parse.rs  should_parse.rs
src/token_preprocessor/: error.rs  mod.rs
src/ui_tests/: mod.rs
src/ui_tests/parse/: invalid_token.out
