[package]
name = "effect-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.14.0", features = ["collections"] }
clap = { version = "4.4.6", features = ["derive"] }
logos = "0.13.0"
miette = { version = "5.10.0", features = ["fancy"] }
stack-graphs = { version = "0.12.0", features = ["visualization"] }
thiserror = "1.0.49"
