
[workspace]
members = ["crates/*"]
default-members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
bumpalo = { version = "3.13", features = ["collections"] }
clap = { version = "4.4", features = ["derive"] }
logos = "0.13.0"
#miette = { version = "5.10.0", features = ["fancy"] }
miette = { git="https://github.com/jdonszelmann/miette/", branch = "rendering-bug", features = ["fancy"] }
derive_more = "0.99.17"
#stack-graphs = { version = "0.12.0", features = ["visualization"], default-features = false }
stack-graphs = { git="https://github.com/jdonszelmann/stack-graphs.git", branch="optional-tree-sitter", features = ["visualization"], default-features = false }
itertools = "0.11.0"
unionfind = {path="./crates/unionfind"}
bnum = "0.8.0"

